syntax = "proto3";
package ETModel;

enum OpRetCode 
{
	Success=0;
	Room_Already_In=200001;
	Room_Already_Full=200002;
	Room_State_Ban=200003;
	Room_Not_Exist=200004;
	Login_Param_Error=200005;
	Login_AccPwd_Error=200006;
	Account_Already_Exist=200007;
	Account_MaxUserId_Error=200008;
	User_GetInfo_Error = 200009;
	Room_Not_Enough_Coin = 200010;
	Room_Too_Much_Coin = 200011;
	Room_Already_Gaming = 200012;
	Room_Already_Out =200013;
	Match_Already_In =200014;
	Match_Already_Out=200015;
	Verify_Key_Invalid = 200016;
	GateUser_Not_Exist = 200017;
	Kick_Other_Login = 200018;
	CreateRoom_Already_IN=200019;
	Match_Is_Closed = 200020;
	Room_Is_Closed = 200021;
	Room_Config_Error=200022;
	Game_Op_Invalid = 200023;
	Match_Player_Invalid=200024;
	
}

enum PlayerState //玩家复合状态位: 值是2^n次方,n从0开始
{
	NONE=0;
	ONLINE= 1;
	READY= 2;
	AUTO= 4; //托管
	CHECK = 8; //已看牌
	FOLD= 16; //弃牌
	LEAVE= 32; //暂离
	AUDIENCE=64; //观众
}

enum GameId
{
	Default = 0;
	BullFight= 1;
}

message GamePlayerData //IMessage
{
	int32 UserId = 1;
	int32 Head = 3;
	int32 Coin = 4;
	int32 Pos =5;
	string Name = 6;
	PlayerState State = 7;
}

message GameRoomData //IMessage
{
	int32 RoomId = 1;
	int32 State = 2;
	int32 RoomType = 3;
	int32 GameId = 4;
	int32 GameMode = 5;
	int32 HallType = 6;
}

message UserInfo //IMessage
{
	int32 UserId=1;
	int32 Level=2;
	int32 Coin=3;
	int32 Head=4;
	string Name=5;
}

//游戏配置:控制游戏是否开启,房间模式等
message GameConfig //IMessage
{
	int64 HallId = 1;
	int32 GameId = 2;
	int32 GameMode = 3;
	int32 State = 4;
	int32 RoomType = 5;
	int32 MinLimitCoin = 6;
	int32 MaxLimitCoin = 7;
}

message MatchRoom
{
	int32 RoomId =1;
	int32 State =2;
	int32 Count =3;
}
























